Removed old shifts